--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="#us">Nosotros</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#products" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
+              <a class="nav-link dropdown-toggle" href="#products" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Productos</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#products-halloween">Halloween</a>
                 <a class="dropdown-item" href="#best-products">Destacados</a>
