Final update style

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
               </div>
 			  <div class="carousel-item">
-                <img class="d-block w-100" src="item 2.png" alt="Third slide">
+                <img class="d-block w-100" src="item 2.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block carousel-txt">
                   <h5 class="text-uppercase">Nuevos sabores disponibles</h5>
                   <p>Prueba estos tres nuevos sabores y endulza tu día con DulcificArte.</p>
@@ -75,6 +75,8 @@
 	<hr>
     <h2 id="we" class="text-center">NOSOTROS</h2>
     <hr>
+    <img class="offset-xl-3 col-6" src="us.jpg">
+	<p>&nbsp;</p>
 	<p class="card-text col-10 col-xl-8 offset-xl-2 text-center offset-lg-1">Somos una empresa familiar dedicada a la repostería y el doodle art. Nuestro objetivo principal es llegar a más personas y que disfruten de cada uno de nuestros dulces a un precio accesible y disfruten de la calidad de cada uno de ellos.</p>
     <hr>
     <h2 id="products" class="text-center">NUESTROS&nbsp;PRODUCTOS</h2>
